--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "1.1.0",
+    "@iconify-json/tabler": "1.1.1",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/compiler-sfc": "^3.2.31",
     "@windicss/plugin-question-mark": "0.1.1",
@@ -25,6 +27,8 @@
     "postcss": "^8.4.7",
     "sass": "~1.49.9",
     "unplugin-auto-import": "0.6.1",
+    "unplugin-element-plus": "0.3.1",
+    "unplugin-icons": "0.13.2",
     "unplugin-vue-components": "0.17.21",
     "vite": "^2.8.4",
     "vite-plugin-windicss": "^1.8.1",
