--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "1.1.1",
     "@iconify-json/mdi": "1.1.0",
     "@iconify-json/tabler": "1.1.1",
     "@intlify/vite-plugin-vue-i18n": "3.3.1",
@@ -34,7 +35,9 @@
     "unplugin-icons": "0.13.2",
     "unplugin-vue-components": "0.17.21",
     "vite": "^2.8.4",
+    "vite-plugin-inspect": "0.4.3",
     "vite-plugin-pages": "0.21.0",
+    "vite-plugin-ssr": "0.3.60-beta.4",
     "vite-plugin-vue-layouts": "0.6.0",
     "vite-plugin-windicss": "^1.8.1",
     "vite-ssg": "0.17.10",
