--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "element-plus": "2.0.3",
     "lodash": "^4.17.20",
+    "mitt": "3.0.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.6"
@@ -24,6 +25,7 @@
     "@iconify-json/mdi": "1.1.0",
     "@iconify-json/tabler": "1.1.1",
     "@intlify/vite-plugin-vue-i18n": "3.3.1",
+    "@types/node": "17.0.21",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/compiler-sfc": "^3.2.31",
     "@windicss/plugin-question-mark": "0.1.1",
@@ -35,12 +37,7 @@
     "unplugin-icons": "0.13.2",
     "unplugin-vue-components": "0.17.21",
     "vite": "^2.8.4",
-    "vite-plugin-inspect": "0.4.3",
-    "vite-plugin-pages": "0.21.0",
-    "vite-plugin-ssr": "0.3.60-beta.4",
-    "vite-plugin-vue-layouts": "0.6.0",
     "vite-plugin-windicss": "^1.8.1",
-    "vite-ssg": "0.17.10",
     "vue-i18n": "9.1.9",
     "windicss": "3.5.0"
   }
