--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noUnusedLocals": true,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "types": [
-      "vite/client",
-      "vite-plugin-pages/client",
-      "vite-plugin-vue-layouts/client"
+      "vite/client"
     ],
     "paths": {
       "@config/*": ["config/*"],
