--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/mdi": "1.1.0",
     "@iconify-json/tabler": "1.1.1",
     "@intlify/vite-plugin-vue-i18n": "3.3.1",
+    "@types/lodash": "4.14.179",
     "@types/node": "17.0.21",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/compiler-sfc": "^3.2.31",
