--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,12 @@
 # @formatter:off
 [dev]
-#command = "yarn dev" # Command to start your dev server
-#targetPort = 4321 # The port for your application server, framework or site generator
-#port = 8888 # The port that the netlify dev will be accessible on
-#framework = "#custom"
-#publish = "public" # The path to your static content folder
-##  jwtRolePath = "app_metadata.authorization.roles" # Object path we should look for role values for JWT based redirects
-##  autoLaunch = true # a Boolean value that determines if Netlify Dev launches the local server address in your browser
-#functions = "functions/"
-#autoLaunch = false
+command = "yarn dev" # Command to start your dev server
+targetPort = 5555 # The port for your application server, framework or site generator
+port = 8888 # The port that the netlify dev will be accessible on
+framework = "#custom"
+publish = "public" # The path to your static content folder
+functions = "netlify/functions"
+autoLaunch = false
 
 
 [build]
