--- a/package.json
+++ b/package.json
@@ -10,41 +10,42 @@
     "dessys": "npx windicss-analysis"
   },
   "dependencies": {
+    "@aacassandra/vue3-progressbar": "1.0.3",
     "@jambonn/vue-next-progressbar": "0.1.4",
     "@netlify/functions": "1.0.0",
-    "@vueuse/core": "7.7.0",
-    "@vueuse/head": "0.7.5",
+    "@vueuse/core": "8.4.2",
+    "@vueuse/head": "0.7.6",
     "date-fns": "^2.28.0",
-    "element-plus": "2.0.3",
+    "element-plus": "2.2.0",
     "ky": "0.30.0",
     "localforage": "1.10.0",
     "lodash": "^4.17.20",
     "mitt": "3.0.0",
     "pinia": "^2.0.11",
-    "vue": "^3.2.31",
+    "vue": "^3.2.33",
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
     "@iconify-json/carbon": "1.1.1",
-    "@iconify-json/mdi": "1.1.0",
-    "@iconify-json/tabler": "1.1.1",
+    "@iconify-json/mdi": "1.1.12",
+    "@iconify-json/tabler": "1.1.13",
     "@intlify/vite-plugin-vue-i18n": "3.3.1",
-    "@types/lodash": "4.14.179",
-    "@types/node": "17.0.21",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "@vue/compiler-sfc": "^3.2.31",
+    "@types/lodash": "4.14.182",
+    "@types/node": "17.0.32",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "^3.2.33",
     "@windicss/plugin-heropatterns": "0.0.8",
     "@windicss/plugin-question-mark": "0.1.1",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "sass": "~1.49.9",
-    "unplugin-auto-import": "0.6.1",
-    "unplugin-element-plus": "0.3.1",
-    "unplugin-icons": "0.13.2",
-    "unplugin-vue-components": "0.17.21",
-    "vite": "^2.8.4",
-    "vite-plugin-windicss": "^1.8.1",
-    "vue-i18n": "9.1.9",
-    "windicss": "3.5.0"
+    "unplugin-auto-import": "0.7.1",
+    "unplugin-element-plus": "0.4.0",
+    "unplugin-icons": "0.14.3",
+    "unplugin-vue-components": "0.19.5",
+    "vite": "^2.9.9",
+    "vite-plugin-windicss": "^1.8.4",
+    "vue-i18n": "9.1.10",
+    "windicss": "3.5.3"
   }
 }
